# f1-2021-rust

./: Cargo.toml  README.md
src/: car_damage.rs  car_setup.rs  car_status.rs  event.rs  final_classification.rs  header.rs  lap_data.rs  lib.rs  lobby_info.rs  motion.rs  packet.rs  participants.rs  session.rs  session_history.rs  telemetry.rs
tests/: test_car_setup.rs  test_car_status.rs  test_car_telemetry.rs  test_event.rs  test_lap_data.rs  test_motion.rs  test_participants.rs  test_session.rs
